      - Added hints for using MSVC
      - Updated wMean tests to avoid integer cases on cast.
    - Added more compilers to CMakeLists.txt
      - NVHPC
      - IntelLLVM
  - Documentation
    - Added test coverage document
    - Updated all the docs to reflect GTest & C++23 switch.
  - Examples
    - New
      - peterdejongEAAO.cpp
      - simone_attractor_bmovie.cpp
      - simone_attractor_search.cpp
      - demo_corners.cpp
      - lorenz_mM.cpp
      - heart2025.cpp
      - duck.cpp
      - heartFrac.cpp
      - feather.cpp
      - mandelbrot_meanOrbit.cpp
      - simone_attractor.cpp
      - demo_data_and_filter.cpp
      - mandelbrot_minOrbit
      - mandeldragon.cpp 
      - mandeldragon_orbits.cpp 
    - Updated
      - newton_z6.cpp: Fixed non-const trig functions for MSVC
      - phoenix.cpp, phoenixD.cpp, phoenixI.cpp: Added OpenMP 2.0 support
      - renamed mandelbrot_real_cfun.cpp to demo_colorizer.cpp
      - Switched to incPx:
        - barrymartin.cpp
        - lorenz_fuz.cpp
        - lorenz_multi.cpp
        - mandelbrot_orbits.cpp
        - newton_orbits.cpp
        - peterdejong.cpp
        - peterdejongM.cpp
        - pickoverPopcorn.cpp
        - sic.cpp
        - simone_attractor.cpp
        - simone_attractor_bmovie.cpp
        - sprott2d.cpp
        - tinkerbell.cpp
        - tinkerbell_search.cpp
  - Miscellaneous
    - Broke utest_colorTpl.cpp up into different files
    - Added IncludeMRMathCPPLib.cmake code
    - Updated version of configure.sh
    - Updated mrw2any.sh &
    - Uniform use of if constexpr.

* 22.0.0.0: Feature & Refactor Release
:PROPERTIES:
:CUSTOM_ID: v22.0.0.0
:END:
  - Fixed Bugs
    - mjr::colorTpl::tfrmMod Added divide by zero check for floating point channels
    - mjr::colorTpl::tfrmDiv Better divide by zero check for floating point channels
    - mjr::colorTpl::tfrmAddDivClamp Better divide by zero check for floating point channels