@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-03-09 Sun 17:53 -->
+<!-- 2025-03-11 Tue 18:36 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2025-03-09 17:53:37</i></td>
+<td class="org-left"><i>2025-03-11 18:35:58</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2025-03-09 17:53:39</i></td>
+<td class="org-left"><i>2025-03-11 18:35:59</i></td>
 </tr>
 </tbody>
 </table>
@@ -373,6 +373,7 @@ Copyright &copy; 2025 Mitch Richling. All rights reserved.
 <li>New
 <ul class="org-ul">
 <li>peterdejongEAAO.cpp</li>
+<li>tricorn_orbits.cpp</li>
 <li>simone_attractor_bmovie.cpp</li>
 <li>simone_attractor_search.cpp</li>
 <li>demo_corners.cpp</li>
